--- a/src/routes/Book/components/LichTrinh.scss
+++ b/src/routes/Book/components/LichTrinh.scss
@@ -1,5 +1,5 @@
 #lich-trinh.table-striped{
-    tbody tr:nth-of-type(odd) {
-        background-color: #c3e6cb;
-    }
+    // tbody tr:nth-of-type(odd) {
+    //     background-color: #c3e6cb;
+    // }
 }
